# rsfetch

./: Cargo.toml
src/: main.rs  utils.rs
src/os/: mac_os.rs  mod.rs  windows.rs
