[package]
name = "rsfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
lazy_static = "1.4.0"
nu-ansi-term = "0.50.0"
regex = "1.10.4"
sysinfo = "0.30.11"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
